--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,8 +1,8 @@
 {
   "name": "relay-modern-scripts",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "Configuration and scripts for Relay React app.",
-  "repository" : "lpalmes/relay-modern-scripts",
+  "repository": "lpalmes/relay-modern-scripts",
   "license": "BSD-3-Clause",
   "engines": {
     "node": ">=6"
@@ -25,8 +25,8 @@
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
-    "babel-plugin-relay": "^1.0.1",
     "babel-loader": "7.1.1",
+    "babel-plugin-relay": "^1.2.0",
     "babel-preset-react-app": "^3.0.2",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -47,6 +47,7 @@
     "graphql": "^0.9.6",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "minimist": "^1.2.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
